[tool.poetry]
name = "auditorium"
version = "2.0.0"
description = "An HTML generator from pure Python code"
authors = ["Alejandro Piad <apiad@apiad.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
typer = "^0.4.0"
uvicorn = {version = "^0.17.1", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
