[project]
name = "auditorium"
version = "1!2.1.0"
description = "Python-scripted live slide framework"
authors = [{name = "Alejandro Piad", email = "apiad@apiad.net"}]
license = {text = "MIT"}
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.12",
    "markdown>=3.6",
]

[project.scripts]
auditorium = "auditorium.cli:app"

[project.optional-dependencies]
record = ["playwright>=1.40"]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
